k8s_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-ws-deployment
spec:
  selector:
    matchLabels:
      app: user-ws
  minReadySeconds: 5
  replicas: 2
  template:
    metadata:
      labels:
        app: user-ws
    spec:
      containers:
        - name: user-ws
          image: user-ws:latest
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: user-ws-service
spec:
  type: NodePort
  selector:
    app: user-ws
  ports:
    -
      port: 8080
      targetPort: 8080
